# logic

./: .gitignore  .gitlab-ci.yml  .travis.yml  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  README.md
.travis/: setup.sh
rtl/logic/: CMakeLists.txt
rtl/logic/axi4/: CMakeLists.txt
rtl/logic/axi4/lite/: CMakeLists.txt
rtl/logic/axi4/lite/buffer/: CMakeLists.txt  logic_axi4_lite_buffer.sv  logic_axi4_lite_buffer_top.sv
rtl/logic/axi4/lite/buffered/: CMakeLists.txt  logic_axi4_lite_buffered.sv  logic_axi4_lite_buffered_basic.sv  logic_axi4_lite_buffered_top.sv
rtl/logic/axi4/lite/bus/: CMakeLists.txt  logic_axi4_lite_bus.sv  logic_axi4_lite_bus_decoder.sv  logic_axi4_lite_bus_main.sv  logic_axi4_lite_bus_multi_slave.sv  logic_axi4_lite_bus_multi_slave_decoder.sv  logic_axi4_lite_bus_multi_slave_mux.sv  logic_axi4_lite_bus_pkg.sv  logic_axi4_lite_bus_to_stream.sv  logic_axi4_lite_bus_top.sv
rtl/logic/axi4/lite/clock_crossing/: CMakeLists.txt  logic_axi4_lite_clock_crossing.sv  logic_axi4_lite_clock_crossing_top.sv
rtl/logic/axi4/lite/from_avalon_mm/: CMakeLists.txt  logic_axi4_lite_from_avalon_mm.sv  logic_axi4_lite_from_avalon_mm_buffer.sv  logic_axi4_lite_from_avalon_mm_buffered.sv  logic_axi4_lite_from_avalon_mm_main.sv  logic_axi4_lite_from_avalon_mm_top.sv
rtl/logic/axi4/lite/queue/: CMakeLists.txt  logic_axi4_lite_queue.sv  logic_axi4_lite_queue_top.sv
rtl/logic/axi4/lite/to_avalon_mm/: CMakeLists.txt  logic_axi4_lite_to_avalon_mm.sv  logic_axi4_lite_to_avalon_mm_main.sv  logic_axi4_lite_to_avalon_mm_top.sv
rtl/logic/axi4/lite/write_aligned/: CMakeLists.txt  logic_axi4_lite_write_aligned.sv  logic_axi4_lite_write_aligned_main.sv  logic_axi4_lite_write_aligned_top.sv
rtl/logic/axi4/stream/: CMakeLists.txt
rtl/logic/axi4/stream/assign/: CMakeLists.txt  logic_axi4_stream_assign.sv  logic_axi4_stream_assign_top.sv
rtl/logic/axi4/stream/buffer/: CMakeLists.txt  logic_axi4_stream_buffer.sv  logic_axi4_stream_buffer_top.sv
rtl/logic/axi4/stream/buffered/: CMakeLists.txt  logic_axi4_stream_buffered.sv  logic_axi4_stream_buffered_top.sv
rtl/logic/axi4/stream/clock_crossing/: CMakeLists.txt  logic_axi4_stream_clock_crossing.sv  logic_axi4_stream_clock_crossing_top.sv
rtl/logic/axi4/stream/delay/: CMakeLists.txt  logic_axi4_stream_delay.sv  (+1 more)
rtl/logic/basic/: CMakeLists.txt
rtl/logic/basic/binary2gray/: CMakeLists.txt  logic_basic_binary2gray.sv
rtl/logic/basic/buffer/: CMakeLists.txt  logic_basic_buffer.sv
rtl/logic/basic/buffered/: CMakeLists.txt  logic_basic_buffered.sv
rtl/logic/basic/delay/: CMakeLists.txt  logic_basic_delay.sv
rtl/logic/basic/gray2binary/: CMakeLists.txt  logic_basic_gray2binary.sv
rtl/logic/basic/queue/: CMakeLists.txt  logic_basic_queue.sv  logic_basic_queue_generic.sv  logic_basic_queue_generic_capacity.sv  logic_basic_queue_generic_memory.sv  logic_basic_queue_generic_read.sv  logic_basic_queue_generic_write.sv  logic_basic_queue_intel.sv  logic_basic_queue_main.sv
rtl/logic/basic/synchronizer/: CMakeLists.txt  logic_basic_synchronizer.sv  logic_basic_synchronizer_generic.sv  logic_basic_synchronizer_intel.sv
rtl/logic/clock/: CMakeLists.txt
rtl/logic/clock/domain_crossing/: CMakeLists.txt  logic_clock_domain_crossing.sdc  logic_clock_domain_crossing.sv  logic_clock_domain_crossing_generic.sv  logic_clock_domain_crossing_generic_memory.sv  logic_clock_domain_crossing_generic_read.sv  logic_clock_domain_crossing_generic_read_service.sv  logic_clock_domain_crossing_generic_read_sync.sv  logic_clock_domain_crossing_generic_write.sv  logic_clock_domain_crossing_generic_write_service.sv  logic_clock_domain_crossing_generic_write_sync.sv  logic_clock_domain_crossing_intel.sv
rtl/logic/dummy/: logic_dummy.sv
rtl/logic/include/: logic.svh  logic_avalon.svh  logic_avalon_mm.svh  logic_avalon_st.svh  logic_axi4.svh  logic_axi4_lite.svh  logic_axi4_stream.svh  logic_config.svh  logic_drc.svh  logic_modport.svh
rtl/logic/interfaces/: CMakeLists.txt  logic_avalon_mm_if.sv  logic_avalon_st_if.sv  logic_axi4_lite_if.sv  logic_axi4_stream_if.sv
rtl/logic/pll/: CMakeLists.txt
rtl/logic/pll/lock_service/: CMakeLists.txt  logic_pll_lock_service.sv  logic_pll_lock_service_main.sv  logic_pll_lock_service_unit.sv
rtl/logic/reset/synchronizer/: CMakeLists.txt  logic_reset_synchronizer.sv  logic_reset_synchronizer_unit.sv
src/logic/: CMakeLists.txt  bitstream.cpp  bitstream_const_iterator.cpp  bitstream_const_reference.cpp  bitstream_iterator.cpp  bitstream_reference.cpp  command_line.cpp  command_line_argument.cpp  command_line_argument.hpp  range.cpp  trace_base.cpp  trace_systemc.cpp  trace_verilated.cpp
src/logic/axi4/: CMakeLists.txt
src/logic/axi4/stream/: CMakeLists.txt  bus_if_base.cpp  monitor.cpp  packet.cpp  reset_agent.cpp  reset_driver.cpp  reset_if.cpp  reset_sequence.cpp  reset_sequence_item.cpp  reset_sequencer.cpp  rx_agent.cpp  rx_driver.cpp  rx_sequence.cpp  rx_sequence_item.cpp  rx_sequencer.cpp  scoreboard.cpp  sequence.cpp  sequencer.cpp  tdata_byte.cpp  test.cpp  testbench.cpp  tx_agent.cpp  tx_driver.cpp  tx_sequence.cpp  tx_sequence_item.cpp  tx_sequencer.cpp
src/logic/gtest/: CMakeLists.txt  factory.cpp  main.cpp
src/logic/printer/: CMakeLists.txt  json.cpp
tests/: CMakeLists.txt
tests/logic/: CMakeLists.txt
tests/logic/axi4/: CMakeLists.txt
tests/logic/axi4/lite/: CMakeLists.txt
tests/logic/axi4/stream/: CMakeLists.txt
tests/logic/basic/: CMakeLists.txt
tests/logic/basic/binary2gray/: CMakeLists.txt  logic_basic_binary2gray_unit_test.sv
tests/logic/basic/gray2binary/: CMakeLists.txt  logic_basic_gray2binary_unit_test.sv
tests/logic/basic/synchronizer/: CMakeLists.txt  logic_basic_synchronizer_unit_test.sv
tests/logic/pll/: CMakeLists.txt
tests/logic/pll/lock_service/: CMakeLists.txt  logic_pll_lock_service_unit_test.sv
tests/logic/reset/: CMakeLists.txt
tests/logic/reset/synchronizer/: CMakeLists.txt  dut.cpp  dut.hpp  logic_reset_synchronizer_test.cpp  logic_reset_synchronizer_testrunner.sv  logic_reset_synchronizer_unit_test.sv  main.cpp  test.cpp  test.hpp
(+284 files in other folders)
