# Copyright 2018 Tymoteusz Blazejczyk
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

add_subdirectory(assign)
add_subdirectory(buffer)
add_subdirectory(delay)
add_subdirectory(queue)
add_subdirectory(clock_crossing)
add_subdirectory(packet_buffer)
add_subdirectory(timer)
add_subdirectory(from_avalon_st)
add_subdirectory(to_avalon_st)
add_subdirectory(mux)
add_subdirectory(demux)
add_subdirectory(upsizer)
add_subdirectory(downsizer)
add_subdirectory(resizer)
add_subdirectory(extract)
add_subdirectory(split)
add_subdirectory(transfer_counter)
